use longterm kernel

--- a/kubernetes/http/centos7-ks.cfg
+++ b/kubernetes/http/centos7-ks.cfg
@@ -34,11 +34,11 @@ repo --name=elrepo-extras --baseurl=http://elrepo.org/linux/extras/el7/x86_64/
 
 %packages --nobase --ignoremissing --excludedocs # install minimal packages
 @core --nodefaults
-kernel-ml
-kernel-ml-devel
-kernel-ml-tools
-kernel-ml-tools-libs
-kernel-ml-headers
+kernel-lt
+kernel-lt-devel
+kernel-lt-tools
+kernel-lt-tools-libs
+kernel-lt-headers
 openssh-server
 ntp
 rsync
