--- a/host/http/centos7-ks.cfg
+++ b/host/http/centos7-ks.cfg
@@ -15,11 +15,9 @@ firewall --disable
 services --enable ssh
 
 zerombr                              # initialize invalid partition table
-#ignoredisk --only-use=vda            # ignore disks except of vda
 clearpart --initlabel --all          # overwrite all partitions
-#part /     --ondisk=vda --asprimary --fstype=ext4 --size=15000 --maxsize=200000 --grow
-part biosboot --fstype=biosboot --size=1
-part /boot --fstype ext4 --size=2048
+part biosboot --fstype biosboot --size=1
+part /boot --fstype ext4 --size=512
 part /     --asprimary --fstype=ext4 --size=1 --grow
 
 rootpw 123@yunion
@@ -27,35 +25,38 @@ user --name yunion --password 123@yunion --plaintext
 
 repo --name=base --baseurl=https://mirrors.aliyun.com/centos/7/os/x86_64/
 repo --name=epel-release --baseurl=https://mirrors.aliyun.com/epel/7/x86_64/
-repo --name=elrepo-kernel --baseurl=http://elrepo.org/linux/kernel/el7/x86_64/
-repo --name=elrepo-release --baseurl=http://elrepo.org/linux/elrepo/el7/x86_64/
+#repo --name=elrepo-kernel --baseurl=http://elrepo.org/linux/kernel/el7/x86_64/
+#repo --name=elrepo-release --baseurl=http://elrepo.org/linux/elrepo/el7/x86_64/
 repo --name=elrepo-extras --baseurl=http://elrepo.org/linux/extras/el7/x86_64/
+
+%pre
+clearpart --all          # overwrite all partitions
+parted -s /dev/vda mklabel gpt
+%end
 
 ## Package Section ##
 
 %packages --nobase --ignoremissing --excludedocs # install minimal packages
 @core --nodefaults
-kernel-lt
-kernel-lt-devel
-kernel-lt-tools
-kernel-lt-tools-libs
-kernel-lt-headers
+kernel
+kernel-devel
+kernel-tools-libs
+kernel-tools
+kernel-headers
 openssh-server
 ntp
 rsync
+curl
 sudo
 epel-release
 yum-utils
-device-mapper-persistent-data
-lvm2
-ipvsadm
+net-tools
+git
+wget
+vim
+pcre-tools
 tcpdump
 # unnecessary firmware
--kernel
--kernel-devel
--kernel-tools-libs
--kernel-tools
--kernel-headers
 -aic94xx-firmware
 -atmel-firmware
 -b43-openfwwf
@@ -88,8 +89,20 @@ tcpdump
 %end
 
 ## Post Install Section ##
-
 %post --log=/var/log/post-install.log
 echo 'yunion ALL = NOPASSWD: ALL' > /etc/sudoers.d/yunion
+
+cat <<EOF >/etc/yum.repos.d/yunion.repo
+[yunion]
+name=Packages for Yunion Multi-Cloud Platform - $basearch
+baseurl=https://iso.yunion.cn/yumrepo-2.8
+sslverify=0
+failovermethod=priority
+enabled=1
+gpgcheck=0
+EOF
+
+systemctl disable firewalld
+systemctl enable ntpd
 
 %end
