ensure kickstart centos image disk label gpt

--- a/kubernetes/http/centos7-ks.cfg
+++ b/kubernetes/http/centos7-ks.cfg
@@ -14,9 +14,9 @@ selinux --disabled
 firewall --disable
 services --enable ssh
 
-zerombr                              # initialize invalid partition table
 #ignoredisk --only-use=vda            # ignore disks except of vda
-clearpart --initlabel --all          # overwrite all partitions
+clearpart --disklabel gpt --all          # overwrite all partitions
+#zerombr                              # initialize invalid partition table
 #part /     --ondisk=vda --asprimary --fstype=ext4 --size=15000 --maxsize=200000 --grow
 part biosboot --fstype=biosboot --size=1
 part /boot --fstype ext4 --size=2048
