--- a/host/http/centos7-ks.cfg
+++ b/host/http/centos7-ks.cfg
@@ -14,8 +14,8 @@ selinux --disabled
 firewall --disable
 services --enable ssh
 
-zerombr                              # initialize invalid partition table
-clearpart --initlabel --all          # overwrite all partitions
+clearpart --disklabel gpt --all          # overwrite all partitions
+#zerombr                              # initialize invalid partition table
 part biosboot --fstype biosboot --size=1
 part /boot --fstype ext4 --size=512
 part /     --asprimary --fstype=ext4 --size=1 --grow
@@ -29,10 +29,9 @@ repo --name=epel-release --baseurl=https://mirrors.aliyun.com/epel/7/x86_64/
 #repo --name=elrepo-release --baseurl=http://elrepo.org/linux/elrepo/el7/x86_64/
 repo --name=elrepo-extras --baseurl=http://elrepo.org/linux/extras/el7/x86_64/
 
-%pre
-clearpart --all          # overwrite all partitions
-parted -s /dev/vda mklabel gpt
-%end
+#%pre
+#parted -s /dev/vda mklabel gpt
+#%end
 
 ## Package Section ##
 
@@ -95,7 +94,7 @@ echo 'yunion ALL = NOPASSWD: ALL' > /etc/sudoers.d/yunion
 cat <<EOF >/etc/yum.repos.d/yunion.repo
 [yunion]
 name=Packages for Yunion Multi-Cloud Platform - $basearch
-baseurl=https://iso.yunion.cn/yumrepo-2.8
+baseurl=https://iso.yunion.cn/yumrepo-2.10
 sslverify=0
 failovermethod=priority
 enabled=1
