--- a/host/http/centos7-ks.cfg
+++ b/host/http/centos7-ks.cfg
@@ -18,7 +18,7 @@ clearpart --disklabel gpt --all          # overwrite all partitions
 #zerombr                              # initialize invalid partition table
 part biosboot --fstype biosboot --size=1
 part /boot --fstype ext4 --size=512
-part /     --asprimary --fstype=ext4 --size=1 --grow
+part /     --fstype=ext4 --size=1 --grow
 
 rootpw 123@yunion
 user --name yunion --password 123@yunion --plaintext
