--- a/kubernetes/http/centos7-ks.cfg
+++ b/kubernetes/http/centos7-ks.cfg
@@ -20,7 +20,7 @@ clearpart --disklabel gpt --all          # overwrite all partitions
 #part /     --ondisk=vda --asprimary --fstype=ext4 --size=15000 --maxsize=200000 --grow
 part biosboot --fstype=biosboot --size=1
 part /boot --fstype ext4 --size=2048
-part /     --asprimary --fstype=ext4 --size=1 --grow
+part /     --fstype=ext4 --size=1 --grow
 
 rootpw 123@yunion
 user --name yunion --password 123@yunion --plaintext
