fix build web base image: use builx build arm64 image

--- a/dockers/web-base/Makefile
+++ b/dockers/web-base/Makefile
@@ -2,5 +2,5 @@ REGISTRY ?= "registry.cn-beijing.aliyuncs.com/yunionio"
 VERSION ?= "latest"
 
 build:
-	sudo docker build -f Dockerfile -t $(REGISTRY)/web-base:$(VERSION) .
-	sudo docker push $(REGISTRY)/web-base:$(VERSION)
+	docker buildx build --platform linux/amd64,linux/arm64 -t $(REGISTRY)/web-base:$(VERSION) -f Dockerfile . --push
+	docker pull $(REGISTRY)/web-base:$(VERSION)
