feature(images): add generic centos7 and ubuntu 18.04 image

--- a/gpu/http/preseed.cfg
+++ b/gpu/http/preseed.cfg
@@ -79,10 +79,20 @@ d-i passwd/root-login boolean true
 d-i passwd/root-password-again password 123@yunion
 d-i passwd/root-password password 123@yunion
 
+# create ubuntu user account
+d-i passwd/user-fullname string ubuntu
+d-i passwd/username string ubuntu
+d-i passwd/user-password password ubuntu
+d-i passwd/user-password-again password ubuntu
+d-i user-setup/allow-password-weak boolean true
+d-i user-setup/encrypt-home boolean false
+d-i passwd/user-default-groups ubuntu sudo
+d-i passwd/user-uid string 900
+
 #  allow SSH login with password and config sudoers
 d-i preseed/late_command string	\
 	sed -i '/PermitRootLogin/c PermitRootLogin yes' /target/etc/ssh/sshd_config; \
-	sed -i '/UseDNS/c UseDNS no' /target/etc/ssh/sshd_config; \
+	# sed -i '/UseDNS/c UseDNS no' /target/etc/ssh/sshd_config; \
 
 # grub config
 d-i grub-installer/only_debian boolean true
