--- a/dockers/web-base/Makefile
+++ b/dockers/web-base/Makefile
@@ -1,5 +1,5 @@
 REGISTRY ?= "registry.cn-beijing.aliyuncs.com/yunionio"
-VERSION ?= "3.6.1"
+VERSION ?= "v3.6.1"
 
 build:
 	docker buildx build --platform linux/amd64,linux/arm64 -t $(REGISTRY)/web-base:$(VERSION) -f Dockerfile . --push
