update host image use xfs

--- a/host/http/centos7-ks.cfg
+++ b/host/http/centos7-ks.cfg
@@ -17,8 +17,8 @@ services --enable ssh
 clearpart --disklabel gpt --all          # overwrite all partitions
 #zerombr                              # initialize invalid partition table
 part biosboot --fstype biosboot --size=1
-part /boot --fstype ext4 --size=512
-part /     --fstype=ext4 --size=1 --grow
+part /boot --fstype xfs --size=512
+part /     --fstype=xfs --size=1 --grow
 
 rootpw 123@yunion
 user --name yunion --password 123@yunion --plaintext
