fix(uefi): create uefi image with qemu 7.2.0

--- a/host/http/centos7-ks-uefi.cfg
+++ b/host/http/centos7-ks-uefi.cfg
@@ -3,7 +3,7 @@
 install                       # install a fresh system
 reboot                        # reboot automatically
 cdrom
-#url --url="https://mirrors.aliyun.com/centos/7/os/x86_64/"  #  from a remote server over HTTP
+# url --url="https://mirrors.aliyun.com/centos/7/os/x86_64/"  #  from a remote server over HTTP
 
 keyboard --vckeymap=us               # keyboard layout
 lang en_US.UTF-8                     # system language
@@ -16,17 +16,17 @@ services --enable ssh
 
 clearpart --disklabel gpt --all          # overwrite all partitions
 #zerombr                              # initialize invalid partition table
+
+# ref: https://gist.github.com/andrewwippler/b636cdb68249ab5ffb67b4d8693a780b
 part biosboot --fstype biosboot --size=1
-part /boot --fstype ext4 --size=512
+part /boot/efi --fstype=vfat --size=200
+part /boot --fstype=ext4 --size=512
 part /     --fstype=ext4 --size=1 --grow
 
 rootpw 123@yunion
-user --name yunion --password 123@yunion --plaintext
 
 repo --name=base --baseurl=https://mirrors.aliyun.com/centos/7/os/x86_64/
 repo --name=epel-release --baseurl=https://mirrors.aliyun.com/epel/7/x86_64/
-#repo --name=elrepo-kernel --baseurl=http://elrepo.org/linux/kernel/el7/x86_64/
-#repo --name=elrepo-release --baseurl=http://elrepo.org/linux/elrepo/el7/x86_64/
 repo --name=elrepo-extras --baseurl=http://elrepo.org/linux/extras/el7/x86_64/
 
 #%pre
@@ -90,4 +90,19 @@ tcpdump
 
 ## Post Install Section ##
 %post --log=/var/log/post-install.log
+echo 'yunion ALL = NOPASSWD: ALL' > /etc/sudoers.d/yunion
+
+cat <<EOF >/etc/yum.repos.d/yunion.repo
+[yunion]
+name=Packages for Yunion Multi-Cloud Platform - $basearch
+baseurl=https://iso.yunion.cn/yumrepo-2.10
+sslverify=0
+failovermethod=priority
+enabled=1
+gpgcheck=0
+EOF
+
+systemctl disable firewalld
+systemctl enable ntpd
+
 %end
