--- a/dockers/web-base/Dockerfile
+++ b/dockers/web-base/Dockerfile
@@ -3,7 +3,7 @@ RUN wget -O /tmp/baremetal-pxerom.rpm https://iso.yunion.cn/vm-images/baremetal-
 RUN rpm2cpio /tmp/baremetal-pxerom.rpm | cpio -idmv
 RUN cp -a ./opt/* /opt
 
-FROM --platform=linux/amd64 registry.cn-beijing.aliyuncs.com/yunionio/web-console-fe:v3.5 as web-console
+FROM --platform=linux/amd64 registry.cn-beijing.aliyuncs.com/yunionio/web-console-fe:v3.10.3-20230619.1 as web-console
 
 FROM nginx:1.21.0
 RUN mkdir -p /opt/cloud/yunion/baremetal/baremetal-prepare
